--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Prueba git</title>
+    <title>Stunning-guacamole</title>
 </head>
 <body>
-    <h1>Titulo</h1>
+    <h1>Stunning-guacamole</h1>
     <img src="./404.png" alt="">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam obcaecati unde cum voluptatum? Praesentium recusandae quaerat, nisi dolor minima ullam!</p>
 </body>
